Fri Mar  7 22:28:52 CET 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, gnubg.c, gtkgame.c, gtkpanels.c, board3d/Makefile.am,
	board3d/gtkcolour3d.c: minor stuff and warnings

Fri Feb 29 19:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkprefs.c, gtkcolour3d.c: Change 3d previews to use widgets not pixmaps.

Thu Feb 28 15:15:08 CET 2008 Christian Anthon <anthon@kiku.dk>

	* osr.c: fix bug introduced by uint changes

Wed Feb 27 21:22:47 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtkoptions.c: add reset all to defaults button.
	* sound.c: fix sound default file bug on windows

Tue Feb 26 12:35:23 CET 2008 Christian Anthon <anthon@kiku.dk>

	* makebearoff.c: don't print progress to stderr unless on a TTY.

Mon Feb 25 23:16:26 CET 2008 Christian Anthon <anthon@kiku.dk>

	* text.c, html.c, latex.c: Allow export of games with beavers/raccoons
	in them.

Mon Feb 25 15:12:08 CET 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, gnubg.c, set.c, sgf.h: cleanup in lists of commands.
	Removed declared but undefined, and defined, but unused. Move all
	declarations to backgammon.h and all lists of commands to gnubg.c.

Sun Feb 24 10:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c, play.c, multithreaded.c, others: Fix multi-threaded progress indicator.

Wed Feb 20 23:52:48 CET 2008 Christian Anthon <anthon@kiku.dk>

	* relational.c: fix bug caused by APPENDI and APPENDF not being
	properly {}'ed.
	* dbprovider.h, relational.c: fix minor compiler warnings.
	* dbprovider.c: add input string to SQL warnings.

Wed Feb 20 23:50:02 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: update GTKOutput to use a g_string instead of a list.

Sun Feb 17 13:19:58 CET 2008 Christian Anthon <anthon@kiku.dk>

	* bearoff.c, dbprovider.c, dbprovider.h, gnubg.sql, gnubgmodule.c,
	gtkrelational.c, gtkrelational.h, relational.c: more relational db
	changes and a few minor compiler warnings. Added new item to matchstat
	and gamestat.
